Add target blank for links

--- a/index.html
+++ b/index.html
@@ -11,207 +11,309 @@
     <div class="grid">
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_000"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_000">Effect 000</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_000"
+          >Effect 000</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_001"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_001">Effect 001</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_001"
+          >Effect 001</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_002"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_002">Effect 002</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_002"
+          >Effect 002</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_003"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_003">Effect 003</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_003"
+          >Effect 003</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_004"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_004">Effect 004</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_004"
+          >Effect 004</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_005"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_005">Effect 005</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_005"
+          >Effect 005</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_006"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_006">Effect 006</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_006"
+          >Effect 006</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_007"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_007">Effect 007</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_007"
+          >Effect 007</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_008"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_008">Effect 008</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_008"
+          >Effect 008</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_009"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_009">Effect 009</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_009"
+          >Effect 009</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_010"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_010">Effect 010</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_010"
+          >Effect 010</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_011"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_011">Effect 011</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_011"
+          >Effect 011</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_012"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_012">Effect 012</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_012"
+          >Effect 012</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_013"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_013">Effect 013</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_013"
+          >Effect 013</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_014"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_014">Effect 014</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_014"
+          >Effect 014</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_015"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_015">Effect 015</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_015"
+          >Effect 015</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_016"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_016">Effect 016</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_016"
+          >Effect 016</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_017"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_017">Effect 017</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_017"
+          >Effect 017</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_018"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_018">Effect 018</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_018"
+          >Effect 018</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_019"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_019">Effect 019</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_019"
+          >Effect 019</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_020"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_020">Effect 020</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_020"
+          >Effect 020</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_021"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_021">Effect 021</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_021"
+          >Effect 021</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_022"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_022">Effect 022</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_022"
+          >Effect 022</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_023"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_023">Effect 023</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_023"
+          >Effect 023</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_024"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_024">Effect 024</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_024"
+          >Effect 024</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_025"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_025">Effect 025</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_025"
+          >Effect 025</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_026"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_026">Effect 026</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_026"
+          >Effect 026</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_027"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_027">Effect 027</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_027"
+          >Effect 027</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_028"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_028">Effect 028</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_028"
+          >Effect 028</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_029"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_029">Effect 029</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_029"
+          >Effect 029</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_030"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_030">Effect 030</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_030"
+          >Effect 030</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_031"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_031">Effect 031</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_031"
+          >Effect 031</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_032"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_032">Effect 032</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_032"
+          >Effect 032</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_033"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_033">Effect 033</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_033"
+          >Effect 033</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_034"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_034">Effect 034</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_034"
+          >Effect 034</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_035"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_035">Effect 035</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_035"
+          >Effect 035</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_036"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_036">Effect 036</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_036"
+          >Effect 036</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_037"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_037">Effect 037</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_037"
+          >Effect 037</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_038"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_038">Effect 038</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_038"
+          >Effect 038</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_039"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_039">Effect 039</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_039"
+          >Effect 039</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_040"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_040">Effect 040</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_040"
+          >Effect 040</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_041"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_041">Effect 041</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_041"
+          >Effect 041</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_042"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_042">Effect 042</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_042"
+          >Effect 042</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_043"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_043">Effect 043</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_043"
+          >Effect 043</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_044"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_044">Effect 044</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_044"
+          >Effect 044</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_045"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_045">Effect 045</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_045"
+          >Effect 045</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_046"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_046">Effect 046</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_046"
+          >Effect 046</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_047"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_047">Effect 047</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_047"
+          >Effect 047</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_048"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_048">Effect 048</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_048"
+          >Effect 048</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_049"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_049">Effect 049</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_049"
+          >Effect 049</a
+        >
       </div>
       <div class="effect">
         <iframe class="iframe" src="/Made-With-GSAP/effects/mwg_050"></iframe>
-        <a class="link" href="/Made-With-GSAP/effects/mwg_050">Effect 050</a>
+        <a class="link" target="_blank" href="/Made-With-GSAP/effects/mwg_050"
+          >Effect 050</a
+        >
       </div>
     </div>
   </body>
